  }
}
\section{Changes in version 1.9.9}{
  \itemize{
    \item added block size support for GDS files stored with scan,snp dimensions
    \item gdsSubset and gdsSubsetCheck now operate on the fastest dimension of the GDS file
  }
}
\section{Changes in version 1.11.1}{
  \itemize{
    \item Added ylim argument to qqPlot.
  }
}
\section{Changes in version 1.11.3}{
  \itemize{
    \item updated gdsSubset for new gdsfmt read.gdsn syntax (also changed in release version)
  }
}
\section{Changes in version 1.11.4}{
  \itemize{
    \item added optional thinThreshold argument to manhattanPlot and qqPlot functions
  }
}
\section{Changes in version 1.11.5}{
  \itemize{
    \item added pointsPerBin argument to manhattanPlot
  }
}
\section{Changes in version 1.11.6}{
  \itemize{
    \item bug fix in qqPlot, manhattanPlot when requesting thinning when bins only have 1 point
  }
}
\section{Changes in version 1.11.7}{
  \itemize{
    \item added vcfWrite function to write VCF file from GenotypeData object
  }
}
\section{Changes in version 1.11.8}{
  \itemize{
    \item added ref.allele option to vcfWrite to select either A or B as the reference allele for each SNP
  }
}
\section{Changes in version 1.11.9}{
  \itemize{
    \item changed colors of BAF plots so points can be more easily distinguished
  }
}
\section{Changes in version 1.11.10}{
  \itemize{
    \item bug fix in gwasExactHW when a block contains only 1 genotype
  }
}
\section{Changes in version 1.11.11}{
  \itemize{
    \item bug fix in added vcfCheck function to compare VCF file to GenotypeData object
  }
}
\section{Changes in version 1.11.12}{
  \itemize{
    \item bug fix in assocTestRegression when a block contains only 1 SNP
  }
}
\section{Changes in version 1.11.13}{
  \itemize{
    \item in case of missing allele code, return character genotype as
    NA
  }
}
\section{Changes in version 1.11.14}{
  \itemize{
    \item added pasteSorted function
  }
}




